# CV-ATS

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  sync_to_hf.yml
app/: main.py
app/core/: config.py  models.py  prompt.py
app/prompts/: template_manager.py
app/prompts/templates/: resume_evaluation_criteria.jinja  resume_evaluation_system_message.jinja
app/services/: ats_formatting.py  blog.py  evaluator.py  github.py  pdf.py  score.py
app/utils/: llm_utils.py  transform.py
synsetic_data/: convert_to_pdf.py  generate_ats_test_pdfs.py
tests/: test_api.py
