[project]
name = "cv-ats"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "google-generativeai>=0.8.3",
    "groq==1.5.0",
    "jinja2==3.1.6",
    "pydantic==2.11.7",
    "pymupdf==1.26.3",
    "pymupdf4llm==0.0.27",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "requests==2.32.4",
    "slowapi==0.1.9",
    "uvicorn==0.30.6",
]

[project.optional-dependencies]
ollama = [
    "ollama==0.5.1",
]

[dependency-groups]
dev = [
    "black==25.9.0",
    "fastapi==0.115.0",
    "google-generativeai>=0.8.3",
    "groq==1.5.0",
    "jinja2==3.1.6",
    "pydantic==2.11.7",
    "pymupdf==1.26.3",
    "pymupdf4llm==0.0.27",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.9",
    "requests==2.32.4",
    "slowapi==0.1.9",
    "uvicorn==0.30.6",
]
